[package]
name = "browser-sync"
version = "0.1.0"
edition = "2021"
description = ""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.1"
diesel = "1.4.8"
semver = "1.0.7"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"]}
tower-http = "0.2.5"
tracing = "0.1.33"
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
